# autotagging

.github/workflows/: tag.yml
scripts/auto_tag/: auto_tag.py  git_util.py  pyproject.toml  pyvenv.cfg  requirements.txt  tag.py  terraffirm.py
