[tool.poetry]
name = "auto_tag"
version = "0.1.0"
description = ""
authors = ["Tom Dugan <tom.dugan@affirm.com>"]

[tool.poetry.dependencies]
python = "^3.10"
GitPython = "^3.1.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
